Add multilanguage user interface

--- a/views/jawa-banten.ejs
+++ b/views/jawa-banten.ejs
@@ -12,7 +12,7 @@
   <body>
   	
 	<nav class="navbar navbar-expand-lg navbar-dark navigation">
-      <a class="navbar-brand" href="#"><Strong> Kamus Tiga Bahasa </Strong></a>
+      <a class="navbar-brand" href="/"><Strong> Kamus Tiga Bahasa </Strong></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -31,11 +31,11 @@
       <div class="custom-card">
           <div class="dropdown">
             <button class="btn language-switch btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Bahasa Indonesia
+              Bahasa Jawa Banten
             </button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-              <a class="dropdown-item" href="#">Bahasa Jawa</a>
-              <a class="dropdown-item" href="#">Bahasa Jawa Banten</a>  
+              <a class="dropdown-item" href="/">Bahasa Indonesia</a>
+              <a class="dropdown-item" href="/jawa">Bahasa Jawa</a>  
             </div>
           </div>
           <form>
@@ -53,11 +53,11 @@
           </form>
       </div>
       <div class="custom-card">
-        <h5 class="secondary-color">Bahasa Jawa</h5>
+        <h5 class="secondary-color">Bahasa Indonesia</h5>
         <h3>Book</h3>
       </div>
       <div class="custom-card">
-        <h5 class="secondary-color">Bahasa Jawa Banten</h5>
+        <h5 class="secondary-color">Bahasa Jawa</h5>
         <h3>Buuk</h3>
       </div>
     </div>
