update about and info

--- a/views/info.ejs
+++ b/views/info.ejs
@@ -27,23 +27,21 @@
       </div>
     </nav>
 
-    	<div class="wrapper">
-    		<div class="custom-card">
-    			<div class="card">
+    <div class="wrapper">
+      <div class="custom-card">
+          <div class="card">
   <div class="card-header">
-    About
+    Info
   </div>
   <div class="card-body">
     <blockquote class="blockquote mb-0">
-      <p>Kamus tiga bahasa ini dapat menerjemahkan bahasa Indonesia ke bahasa Jawa dan bahasa Jawa Banten, menerjemahkan bahasa Jawa ke bahasa indonesia dan bahasa Jawa Banten, dan menerjemahkan bahasa Jawa Banten ke bahasa Indonesia dan bahasa Jawa.<br>Dengan adanya kamus ini, saya harap masyarakat dapat dengan mudah mempelajari bahasa Jawa dan bahasa Jawa Banten dengan mudah.
-      </br></p>
+      <p>Terima kasih telah mengunjungi website saya</p> 
+
     </blockquote>
   </div>
 </div>
-
-    		</div>
-    	</div>
-
+      </div>
+    </div>
 
     <footer class="text-center">
       <span>Copyright &copy; KTB - Create by Syahrul Alfian</span>
