--- a/views/jawa.ejs
+++ b/views/jawa.ejs
@@ -34,7 +34,7 @@
               Bahasa Jawa
             </button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-              <a class="dropdown-item" href="/">Bahasa Indpnesia</a>
+              <a class="dropdown-item" href="/">Bahasa Indonesia</a>
               <a class="dropdown-item" href="/jawa-banten">Bahasa Jawa Banten</a>  
             </div>
           </div>
