Change info to contact

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -21,7 +21,7 @@
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
             <a class="nav-link" href="/about">About <span class="sr-only">(current)</span></a>
-            <a class="nav-link" href="/info">Info <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/contact">Contact <span class="sr-only">(current)</span></a>
           </li>
         </ul>
       </div>
@@ -29,18 +29,10 @@
 
     	<div class="wrapper">
     		<div class="custom-card">
-    			<div class="card">
-  <div class="card-header">
-    About
-  </div>
-  <div class="card-body">
-    <blockquote class="blockquote mb-0">
-      <p>Kamus tiga bahasa ini dapat menerjemahkan bahasa Indonesia ke bahasa Jawa dan bahasa Jawa Banten, menerjemahkan bahasa Jawa ke bahasa indonesia dan bahasa Jawa Banten, dan menerjemahkan bahasa Jawa Banten ke bahasa Indonesia dan bahasa Jawa.<br>Dengan adanya kamus ini, saya harap masyarakat dapat dengan mudah mempelajari bahasa Jawa dan bahasa Jawa Banten dengan mudah.
-      </br></p>
-    </blockquote>
-  </div>
-</div>
-
+    			<blockquote class="blockquote mb-0">
+				      <p>Kamus tiga bahasa ini dapat menerjemahkan bahasa Indonesia ke bahasa Jawa dan bahasa Jawa Banten, menerjemahkan bahasa Jawa ke bahasa indonesia dan bahasa Jawa Banten, dan menerjemahkan bahasa Jawa Banten ke bahasa Indonesia dan bahasa Jawa.<br>Dengan adanya kamus ini, saya harap masyarakat dapat dengan mudah mempelajari bahasa Jawa dan bahasa Jawa Banten dengan mudah.
+				      </br></p>
+				    </blockquote>
     		</div>
     	</div>
 
