--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,6 @@
 
       body {
-        background-color: #e0e0e0;
+        background-color: #e0e0e0 !important;
       }
       .navigation {
         background-color: #D32F2F;
