--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -21,7 +21,7 @@
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
             <a class="nav-link" href="/about">About <span class="sr-only">(current)</span></a>
-            <a class="nav-link" href="/info">Info <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/contact">contact <span class="sr-only">(current)</span></a>
           </li>
         </ul>
       </div>
@@ -31,11 +31,12 @@
       <div class="custom-card">
           <div class="card">
   <div class="card-header">
-    Info
+    Contact
   </div>
   <div class="card-body">
     <blockquote class="blockquote mb-0">
-      <p>Terima kasih telah mengunjungi website saya</p> 
+      <p>email : syahrul.alfian1@gmail.com</p>
+      <p> tlp  : 089505454513</p> 
 
     </blockquote>
   </div>
