--- a/views/indonesia.ejs
+++ b/views/indonesia.ejs
@@ -21,7 +21,7 @@
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
             <a class="nav-link" href="/about">About <span class="sr-only">(current)</span></a>
-            <a class="nav-link" href="/info">Info <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/contact">Contact <span class="sr-only">(current)</span></a>
           </li>
         </ul>
       </div>
