--- a/views/jawa-banten.ejs
+++ b/views/jawa-banten.ejs
@@ -20,8 +20,8 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
-            <a class="nav-link" href="#">Info <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="About">About <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="contact">Contact</CENTER> <span class="sr-only">(current)</span></a>
           </li>
         </ul>
       </div>
