--- a/views/about.ejs
+++ b/views/about.ejs
@@ -5,7 +5,7 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel='stylesheet' href='/stylesheets/bootstrap-min.css'/>
     <script type="text/javascript" src="/javascripts/bootstrap-min.js"></script>
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 
   </head>
